added a bash script to help streamline pushing, and also added margins

--- a/style.css
+++ b/style.css
@@ -10,4 +10,9 @@ h1 {
 p {
     color: black;
     font-size: 100%;
+
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 50px;
+    margin-left: 50px;
 }
