--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+div {
+    margin: 50px;
+    height: 250px;
+    width: 500px;
+    padding-left:10px;
+    background-color: #d1d0b4;
+    border: 2px solid #000000;
+}
+
+/* For if we need a subheading for the subheading */
+.subheading1 {
+    font-weight: 350;
+    font-size: 110%;
+    margin-top: 3px;
+}
+
 body {
     background-color: white;
 
@@ -7,9 +23,51 @@ body {
     margin-left: 50px;
 }
 
+
+hr { 
+    display: block;
+    width: 100%; 
+    text-align: left;
+
+    margin-top: 10px; 
+    margin-bottom: 10px;
+    border-style: inset;
+    border-width: 1px;
+} 
+
+
+/*NAME AT TOP OF WEBSITE*/ 
 h1 {
     color: black;
-    font-size: 160%;
+    font-weight: 500;
+    font-size: 200%;
+}
+
+
+/*SUBHEADING (Experience, Education)*/ 
+h2 {
+    color: black;
+    font-weight: 300;
+    font-size: 150%;
+    margin-bottom: -5px;
+}
+
+
+/*SUBHEADING 2 (Specifics)*/ 
+h3 {
+    color: black;
+    font-weight: 400;
+    font-size: 120%;
+    margin-top: -3px;
+    margin-bottom: -3px;
+    /* Adjust as needed */
+}
+
+
+/*LISTS*/ 
+ul {
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
 p {
